Fixed stretched rows with boxed layout

--- a/style.css
+++ b/style.css
@@ -3044,7 +3044,6 @@ body.layout-full {
   padding: 25px 1000px 25px 1000px;
 }
 .layout-boxed .panel-row-style {
-  margin: 0 -35px;
   padding: 25px 35px;
 }
 .layout-boxed .panel-row-style.panel-row-style-wide-grey {
